<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kontrol.inventoryapp.DetailActivity">

    <ImageView
        android:id="@+id/detail_item_photo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/ic_no_photo_available"
        android:layout_gravity="center" />

    <!-- Item Name -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_tag"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/detail_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold|italic"/>

    </LinearLayout>

    <!-- Item Price -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50dp">

       <TextView
           android:layout_width="100dp"
           android:layout_height="wrap_content"
           android:text="@string/price_tag"
           android:textAppearance="?android:textAppearanceLarge"
           android:textStyle="bold"/>

        <TextView
            android:id="@+id/detail_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginLeft="20dp"
            android:textStyle="bold|italic"/>

    </LinearLayout>

    <!-- Item Quantity -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50dp">


        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/quantity_tag"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/detail_item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:paddingLeft="20dp"
            android:textStyle="bold|italic"/>

    </LinearLayout>


    <!-- Item Supplier -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50dp">


        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/supplier_tag"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/detail_item_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:paddingLeft="20dp"
            android:textStyle="bold|italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/sale_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale_text" />

        <Button
            android:id="@+id/shipment_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/shipment_text" />
    </LinearLayout>


</LinearLayout>
